@@ -75,7 +75,7 @@ CREATE TABLE `tl_iso_products` (
   `description` text NULL,
   `keywords_meta` text NULL,
   `description_meta` text NULL,
-  `price` decimal(12,3) unsigned NOT NULL default '0.000',
+  `price` decimal(12,2) unsigned NOT NULL default '0.000',
   `price_override` varchar(255) NOT NULL default '',
   `max_order_quantity` int(10) unsigned NOT NULL default '0',
   `stock_enabled` char(1) NOT NULL default '',
@@ -334,7 +334,7 @@ CREATE TABLE `tl_cart_items` (
   `product_name` varchar(255) NOT NULL default '',
   `product_options` blob NULL,
   `product_quantity` int(10) unsigned NOT NULL default '0',
-  `price` decimal(12,3) unsigned NOT NULL default '0.000',
+  `price` decimal(12,2) unsigned NOT NULL default '0.000',
   `href_reader` varchar(255) NOT NULL default '',
   `rules_applied` blob NULL,
   PRIMARY KEY  (`id`),
@@ -384,7 +384,7 @@ CREATE TABLE `tl_iso_payment_modules` (
   `type` varchar(64) NOT NULL default '',
   `label` varchar(255) NOT NULL default '',
   `note` text NULL,
-  `price` decimal(12,3) unsigned NOT NULL default '0.000',
+  `price` decimal(12,2) unsigned NOT NULL default '0.000',
   `tax_class` int(10) unsigned NOT NULL default '0',
   `countries` blob NULL,
   `shipping_modules` blob NULL,
@@ -454,7 +454,7 @@ CREATE TABLE `tl_iso_shipping_modules` (
   `subdivisions` longblob NULL,
   `minimum_total` varchar(32) NOT NULL default '',
   `maximum_total` varchar(32) NOT NULL default '',
-  `price` decimal(12,3) unsigned NOT NULL default '0.000',
+  `price` decimal(12,2) unsigned NOT NULL default '0.000',
   `surcharge_field` varchar(255) NOT NULL default '',
   `flatCalculation` varchar(10) NOT NULL default '',
   `weight_unit` varchar(5) NOT NULL default '',
@@ -561,7 +561,7 @@ CREATE TABLE `tl_iso_order_items` (
   `product_name` varchar(255) NOT NULL default '',
   `product_options` blob NULL,
   `product_quantity` int(10) unsigned NOT NULL default '0',
-  `price` decimal(12,3) unsigned NOT NULL default '0.000',
+  `price` decimal(12,2) unsigned NOT NULL default '0.000',
   `rules_applied` blob NULL,
   PRIMARY KEY  (`id`),
   KEY `pid` (`pid`)
